ちょっと後退

--- a/public/index.html
+++ b/public/index.html
@@ -13,46 +13,44 @@
     </div>
   </header>
 
-<!-- タブ切り替え -->
-<div class="tabs">
-  <button class="tab active" id="memoryTab">memory</button>
-  <button class="tab" id="chatTab">chat</button>
-  <button class="tab" id="presentTab">present</button> <!-- 新規追加 -->
-</div>
-
-<!-- スワイプエリア -->
-<div style="overflow:hidden;">
-  <div id="swipeContainer" class="swipe-container" style="width:300%;"> <!-- 3画面分に拡張 -->
-    <!-- memory パネル -->
-    <div class="panel" id="memoryPanel">
-      <!-- 既存のmemory内容 -->
-    </div>
-
-    <!-- chat パネル -->
-    <div class="panel" id="chatPanel">
-      <p>ここに chat コンテンツが入る予定</p>
-    </div>
-
-    <!-- present パネル -->
-    <div class="panel" id="presentPanel">
-      <p>ここが present タブのコンテンツだよ〜🎁✨</p>
-    </div>
+  <!-- タブ切り替え -->
+  <div class="tabs">
+    <button class="tab active" id="memoryTab">memory</button>
+    <button class="tab" id="chatTab">chat</button>
   </div>
-</div>
 
+  <!-- スワイプエリア -->
+  <div style="overflow:hidden;">
+    <div id="swipeContainer" class="swipe-container">
+      <!-- memory パネル -->
+      <div class="panel" id="memoryPanel">
+        <ul id="postList"></ul>
+      </div>
 
       <!-- chat パネル -->
       <div class="panel" id="chatPanel">
-        <p>ここに chat コンテンツが入る予定</p>
+        <h2>Chat 機能</h2>
+        <ul id="chatMessages">
+          <li>（例）こんにちは！</li>
+          <li>（例）ようこそ Re:verce へ！</li>
+        </ul>
       </div>
     </div>
   </div>
+
+  <!-- 投稿フォーム（ポップアップ） -->
+  <form id="postForm" class="post-form popup" style="display: none;" enctype="multipart/form-data">
+    <input type="text" id="textInput" placeholder="テキストを入力" />
+    <input type="file" id="imageInput" accept="image/*" multiple />
+    <button type="submit">投稿</button>
+    <button type="button" id="closeForm">キャンセル</button>
+  </form>
 
   <!-- ボトムナビ -->
   <nav class="bottom-nav">
     <button class="nav-btn" id="memoryNav">🏠</button>
     <button class="nav-btn" id="chatNav">🎁</button>
-    <button class="nav-btn" id="plusBtn">＋</button>
+    <button class="nav-btn" id="openFormBtn">＋</button>
   </nav>
 
   <footer>
