--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
   <div class="tabs">
     <button class="tab active" id="memoryTab">memory</button>
     <button class="tab" id="chatTab">chat</button>
+    <button class="tab" id="presentTab">present</button>
   </div>
 
   <!-- スワイプエリア -->
@@ -35,10 +36,16 @@
           <li>（例）ようこそ Re:verce へ！</li>
         </ul>
       </div>
+
+      <!-- present パネル -->
+      <div class="panel" id="presentPanel">
+        <h2>Present 機能</h2>
+        <p>ここにプレゼント機能が入ります。</p>
+      </div>
     </div>
   </div>
 
-  <!-- 投稿フォーム（ポップアップ） -->
+  <!-- 投稿フォーム -->
   <form id="postForm" class="post-form popup" style="display: none;" enctype="multipart/form-data">
     <input type="text" id="textInput" placeholder="テキストを入力" />
     <input type="file" id="imageInput" accept="image/*" multiple />
@@ -49,7 +56,7 @@
   <!-- ボトムナビ -->
   <nav class="bottom-nav">
     <button class="nav-btn" id="memoryNav">🏠</button>
-    <button class="nav-btn" id="chatNav">🎁</button>
+    <button class="nav-btn" id="presentNav">🎁</button>
     <button class="nav-btn" id="openFormBtn">＋</button>
   </nav>
 
