--- a/AI_Chat/index.html
+++ b/AI_Chat/index.html
@@ -19,8 +19,8 @@
     </div>
   </div>
 
-  <script>
-    // 👇 実行時に .env は読めないので、Node.jsの環境で渡すか、ここに直接書く
+  <script src="chat.js"></script>
+    👇 実行時に .env は読めないので、Node.jsの環境で渡すか、ここに直接書く
     const apiKey = 'ここにAPIキーを直接書くか、Node.jsサーバー側で処理してね！';
 
     const apiUrl = 'https://api.openai.com/v1/chat/completions';
