--- a/public/index.html
+++ b/public/index.html
@@ -31,16 +31,127 @@
       <!-- chat パネル -->
       <div class="panel" id="chatPanel">
         <h2>Chat 機能</h2>
-        <ul id="chatMessages">
-          <li>（例）こんにちは！</li>
-          <li>（例）ようこそ Re:verce へ！</li>
-        </ul>
+              <div id="chatContainer"></div>
+              <div id="inputArea">
+              <textarea id="userInput" rows="3" placeholder="メッセージを入力 (Enterは改行)"></textarea>
+              <div class="buttons">
+              <button onclick="sendToChatGPT()" aria-label="送信" title="送信" class="send-button">📤</button>
+              <button onclick="clearChat()">チャットをクリア</button>
+
+              <style>
+                          body {
+                              background-color: #ffffff;
+                              color: #f0f0f0;
+                              font-family: 'Helvetica Neue', sans-serif;
+                              margin: 0 auto;
+                              padding: 0;
+                              display: flex;
+                              flex-direction: column;
+                              height: 100vh;
+                              width: 320px;
+                              box-sizing: border-box;
+                              border: 1px solid #444;
+                          }
+
+                          #chatContainer {
+                              flex: 1;
+                              overflow-y: auto;
+                              padding: 20px;
+                              display: flex;
+                              flex-direction: column;
+                              background-color: #1e1e1e;
+                              width: 100%;
+                              box-sizing: border-box;
+                          }
+
+                          .messageRow {
+                              display: flex;
+                              margin-bottom: 10px;
+                          }
+
+                          .userRow {
+                              justify-content: flex-end;
+                          }
+
+                          .assistantRow {
+                              justify-content: flex-start;
+                          }
+
+                          .message {
+                              max-width: 70%;
+                              padding: 10px 15px;
+                              border-radius: 16px;
+                              line-height: 1.5;
+                              word-wrap: break-word;
+                              white-space: pre-wrap;
+                              font-size: 16px;
+                          }
+
+                          .user {
+                              background-color: #00c853;
+                              color: #fff;
+                              border-bottom-right-radius: 0;
+                          }
+
+                          .assistant {
+                              background-color: #333;
+                              color: #fff;
+                              border-bottom-left-radius: 0;
+                          }
+
+                          #inputArea {
+                              display: flex;
+                              flex-direction: column;
+                              padding: 10px;
+                              background-color: #2b2b2b;
+                              width: 100%;
+                              box-sizing: border-box;
+                          }
+
+                          textarea {
+                              background-color: #2e2e2e;
+                              color: #ffffff;
+                              border: 1px solid #444;
+                              padding: 10px;
+                              resize: none;
+                              font-size: 16px;
+                              width: 100%;
+                              box-sizing: border-box;
+                          }
+
+                          .buttons {
+                              margin-top: 5px;
+                              display: flex;
+                              gap: 10px;
+                          }
+
+                          button {
+                              flex: 1;
+                              background-color: #444;
+                              color: #fff;
+                              border: none;
+                              padding: 10px;
+                              cursor: pointer;
+                              font-size: 14px;
+                              border-radius: 6px;
+                              transition: background-color 0.3s ease;
+                          }
+
+                          button:hover {
+                              background-color: #666;
+                          }
+
+                          .send-button {
+                              font-size: 20px;
+                              padding: 6px 12px;
+                          }
+              </style>
+    </div>
       </div>
 
       <!-- present パネル -->
       <div class="panel" id="presentPanel">
-        <h2>Present 機能</h2>
-        <p>ここにプレゼント機能が入ります。</p>
+          
       </div>
     </div>
   </div>
